syntax = "proto3";

package pb;

//===================MOSS REGISTER====================
//user register
message RegisterReq {
    string user_name = 1;
    string user_phone = 2;
    string user_password = 3;
}

//return in http.Header "Authorization"= "Bearer "+signedKey
message RegisterRes {
    string user_name = 1;
    string user_phone = 2;
    string user_id=3;
    string audience=4;
}

//===================MOSS REGISTER====================
